<resources>
    <string name="app_name">MyFirstAndroidApp</string>
    <string name="hiText">Hello, this is an example of TextView</string>
    <string name="writeSomething">Write something here!</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="textExample">This is my first Barista Test</string>
    <string name="toastText">This is an example of Toast</string>
    <string name="clickActivity">Click here</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="androidText">Android</string>
    <string name="baristaText">Barista</string>

</resources>
